Fix activation of the context menu via the keyboard on Win32 (bug 199737). r=shliang, sr/a=sspitzer.